# router/use_cases/use_cases.routes.js
@@ -4,6 +4,7 @@ const router = express.Router();
 const useCases = require('../../controller/useCases/useCases.controller')
 
 router.get('/get_useCases', useCases.getUseCases)
+router.put('/update_useCases', useCases.updateUseCases)
 router.post('/create_useCases', useCases.createUseCases)
 
 
