# router/user/user.routes.js
@@ -4,8 +4,8 @@ const router = express.Router();
 const user = require('../../controller/user/user.controller')
 
 router.get('/get_user', user.getUser)
-router.post('/create_user', user.createuser)
-router.put('/data', user.createuser)
+router.post('/create_user', user.createUser)
+router.put('/update_user', user.updateUser)
 router.delete('/delete_user/:user_id', user.deleteUser)
 
 
